# portfolio-shirsendu

./: CHANGELOG.md  docker-compose.prod.yml  nuxt.config.ts  package.json
.github/workflows/: deploy.yml  integrate.yml  release.yml
app/components/Card/: Hackathon.vue
app/components/Section/: Hero.vue
app/composables/: useAPI.ts
app/pages/: index.vue
app/plugins/: links.client.ts
server/api/: contact.post.ts  newsletter.post.ts
server/emails/: ContactTemplate.vue  ProspectTemplate.vue
server/mcp/tools/: get-project.ts  get-projects.ts  test.ts
server/routes/certificates/: [...file].ts
src-tauri/: Cargo.toml
