[package]
name = "portfolio-shirsendu"
description = "Shirsendu's devfolio showcasing his projects, experience and certification in a visually appealing manner"
authors = ["Shirsendu Bairagi <shirsendu2001@gmail.com>"]
license = "GPL-3.0-only"
repository = "https://github.com/shba007/portfolio-shirsendu.git"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
